# mch-python-blueprint

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  CSCS_VENVS.rst  LICENSE  Makefile  README.md  README.rst  appveyor.yml  ci_cd.html  cookiecutter.json  copier.yaml  development_tools.html  documentation.html  environment.yml  faq.html  genindex.html  index.html  objects.inv  pyproject.toml  readme.html  requirements.yml  requirements_dev.txt  requirements_dev_unpinned.txt  search.html  searchindex.js  {{cookiecutter.project_slug}}
.github/workflows/: blueprint-docs.yaml  blueprint-docs.yml  blueprint-pre-commit.yml  documentation.yaml  new-project.yml  precommit.yml  project-precommit.yml
_sources/example_project/: AUTHORS.md.txt  CONTRIBUTING.md.txt  HISTORY.md.txt  README.md.txt  USAGE.md.txt
_sources/example_project/.github/: ISSUE_TEMPLATE.md.txt
_sources/example_project/docs/: index.rst.txt  installation.rst.txt  modules.rst.txt
docs/: ci_cd.rst  conf.py  console_script_setup.rst  development_tools.rst  documentation.rst  faq.rst  index.rst  projects_and_blueprint.rst  prompts.rst  pypi_release_checklist.rst  quickstart.rst  requirements.txt  travis_pypi_setup.rst  troubleshooting.rst  tutorial.rst
example_project/: AUTHORS.html  CONTRIBUTING.html  HISTORY.html  README.html  USAGE.html
example_project/.github/: ISSUE_TEMPLATE.html
example_project/docs/: authors.html  contributing.html  history.html  index.html  installation.html  modules.html  readme.html  usage.html
hooks/: post_gen_project.py  pre_gen_project.py
jenkins/: JenkinsJob  Jenkinsfile
readme/: deployment.rst  development_tools.rst  formatting_linting.rst  install_packages_cscs.rst  installation_and_dependencies.rst  projects_and_blueprint.rst  python_cscs.rst  quickstart.rst  readme_old.rst  recommended_libraries.rst  tutorial.rst  venvs_cscs_old.rst  virtual_environments.rst  virtual_envs.rst
readme/old/: CSCS_VENVS.rst  README.rst  deployment.rst  formatting_linting.rst  install_packages_cscs.rst
readme/very_old/: CSCS_VENVS.rst  README.rst
requirements/: dev-environment.yml  dev-requirements.yml  environment.yml  requirements.yml
tests/: test_bake_project.py
tmpl/: .gitignore  .pre-commit-config.yaml  AUTHORS.md.j2  AUTHORS.rst.j2  CONTRIBUTING.md.j2  CONTRIBUTING.rst  CONTRIBUTING.rst.j2  HISTORY.md.j2  HISTORY.rst  LICENSE.j2  MANIFEST.in  README.md.j2  README.rst  USAGE.md.j2  USAGE.txt  USAGE.txt.j2  codespell_ignored_words.txt  pyproject.toml.j2  requirements.yml.j2  run-mypy.sh  run-mypy.sh.j2  setup_env.sh  setup_env.sh.j2  setup_miniconda.sh  test_all.sh  {{ _copier_conf.answers_file }}.j2
tmpl/.github/workflows/: pre-commit.yml
tmpl/docs/: Makefile.j2  conf.py  conf.py.j2  index.rst  index.rst.j2  installation.rst.j2  make.bat  modules.rst.j2  usage.rst.j2
tmpl/jenkins/: JenkinsJobPR.j2  Jenkinsfile  Jenkinsfile.j2
tmpl/requirements/: dev-environment.yml  dev-requirements.yml  environment.yml  environment.yml.j2  requirements.yml.j2  tox-requirements.txt
tmpl/src/{{ project_package }}/: __init__.py.j2  cli.py.j2
tmpl/src/{{cookiecutter.project_slug}}/: __init__.py
tmpl/src/{{module_name}}/: __init__.py.j2  cli.py.j2
tmpl/src/{{project_slug}}/: cli.py.j2
tmpl/tests/test_{{ project_package }}/: test_cli.py.j2
tmpl/tests/test_{{module_name}}/: test_cli.py.j2  test_mutable_number.py.j2  test_utils.py.j2
tmpl/tests/test_{{project_slug}}/: test_cli.py.j2  test_mutable_number.py  test_utils.py.j2
tmpl/tools/: run-mypy.sh.j2  setup_env.sh.j2  setup_miniconda.sh
tools/: update_env.sh  update_tmpl_env.sh
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  Makefile.conda.mk  Makefile.pip-venv.mk  Pipfile  README.rst  USAGE.txt  install.sh  installer.py  installer.sh  mypy.ini  pylintrc  pyproject.toml  requirements_dev.soft.txt  requirements_dev.txt  requirements_dev_frozen.txt  run-mypy.sh  setup.cfg  setup.pip-venv.py  setup.py  setup_env.sh  setup_miniconda.sh  test_all.sh  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: precommit.yml
{{cookiecutter.project_slug}}/docs/: conf.py  documentation.inactive  index.rst  installation.rst
{{cookiecutter.project_slug}}/jenkins/: JenkinsJobPR  Jenkinsfile
{{cookiecutter.project_slug}}/requirements/: README.rst  dev-environment.yml  dev-pinned.txt  dev-requirements.in  dev-requirements.txt  dev-requirements.yml  dev-unpinned.txt  environment.yml  pip-requirements.txt  requiirements.yml  requirements.in  requirements.txt  requirements.yml  run-pinned.txt  test-unpinned.txt  tox-pinned.txt
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  utils.py  {{ 'cli.py' if cookiecutter.sample_code == 'calculator' else '' }}  {{ 'cli.py' if cookiecutter.sample_code == 'cli' else '' }}  {{ 'cli.py' if cookiecutter.sample_code == 'no' else '' }}  {{ 'mutable_number.py' if cookiecutter.sample_code == 'calculator' else '' }}  {{ 'utils.py' if cookiecutter.include_sample_code == 'y' else '' }}  {{ 'utils.py' if cookiecutter.sample_code != 'no' else '' }}
{{cookiecutter.project_slug}}/tests/test_{{cookiecutter.project_slug}}/: test_cli.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.project_slug}}/: test_cli.py  test_mutable_number.py  test_utils.py  test_{{cookiecutter.project_slug}}.py  {{ 'test_cli.py' if cookiecutter.sample_code == 'cli' else '' }}  {{ 'test_utils.py' if cookiecutter.include_sample_code == 'y' else '' }}  {{ 'test_utils.py' if cookiecutter.sample_code != 'no' else '' }}
