[project]
name = "mch-python-blueprint"
version = "0.2.0"
description = "MCH APN Blueprint for Python packages"
readme = "README.rst"
keywords = [
    "mch-python-blueprint",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
authors = [
    {name="Carlos Osuna", email="carlos.osuna@meteoswiss.ch"},
    {name="Daniel Regenass", email="daniel.regenass@meteoswiss.ch"},
    {name="Stefan Ruedisuehli", email="stefan.ruedisuehli@env.ethz.ch"}
]

[project.urls]
source = "https://github.com/MeteoSwiss-APN/mch-python-blueprint"
documentation = "https://meteoswiss-apn.github.io/mch-python-blueprint"

[tool.rstcheck]
ignore_directives = [
    "automodule",
    "mdinclude",
]

[tool.codespell]
ignore-regex = '(\b[A-Z]+\b|.*([#!"]|<!--) *codespell-ignore\b)'
# - Ignore all-uppercase words (acronyms)
# - Ignore lines with codespell-ignore comment
ignore-words = './tmpl/codespell_ignored_words.txt'
# Note: To skip local files by their full path, codespell (v2.2.2) requires
# './src/...` when called from the command line but 'src/...' when called via
# pre-commit (as local hook); '*src/...` matches both
skip = """\
.git,\
*.codespell-ignore.*,\
requirements/*,\
"""
